2024-11TIL.md を更新

--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -40,3 +40,6 @@
 > - ベースブランチに変更が入った場合は作業中のトピックブランチにも反映させておく
 > - -aオプション：更新されたファイルをステージングエリアに追加してそのままコミット
 
+### 2024-11-07 THU
+- Docker：Docker&仮想サーバー完全入門
+> docker compose up -dコマンドでoperation not permittedのエラー。解決法を調べる。
