2024-11TIL.md を更新

--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -50,3 +50,6 @@
 > - ボリューム：Dockerが管理する記憶領域にデータを永続化する仕組み。データベースのデータなどに向いている。公式推奨。
 > - バインドマウント：ホストOSのフォルダやファイルをマウントする仕組み。変更頻度の高いデータ向き。
 > - DockerFile：どんなイメージを作るのか設定を記述するテキストファイル
+
+### 2024-11-08 FRI
+
