2024-11TIL.md を更新

--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -110,3 +110,8 @@
 > - catコマンド：ファイルの内容を確認。-nオプションで行番号表示
 > - 「less is more（lessはmoreより良い）」
 > - ls > ls-output：lsの出力結果をリダイレクトして、ファイルに書き込む
+
+### 2024-11-21 THU
+- 職業訓練校：企業実習
+- SQL：スッキリわかるSQL入門
+> 企業実習では必要なSQLをひたすら考えて書いている。この機会にSQLの基礎を固めようと思い書籍を購入。
