--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -1,137 +1,172 @@
-### 2024-11-01 FRI 
-- 職業訓練校：開発演習 II 
-- 個人開発：Web 単語帳アプリ Tango の要件定義とユースケース図作成  
-> 今日からプログラミングの学習記録をつける。  
-> 開発演習では自分の担当部分がほぼ想定通り動くようになった。頭を悩ませながら作り込んだ部分だったので嬉しさもひとしお。一方チームの他の人が作っている部分については全く理解が及ばず。全体像がまだ見えない。  
-> Web 単語帳アプリの開発を始めた。アプリ名も決定。フロントエンド部分はできれば Vue で作りたいので勉強しないと。ただ時間が限られているので技術選定は慎重にしよう。
+### 2024-11-01 FRI
 
-### 2024-11-02 SAT 
-- 基本情報科目 B：アルゴリズム × 擬似言語トレーニングブック
-- 基本情報科目 A：過去問道場
-- Git：いちばんやさしい Git&GitHub の教本
-> 最近までずっと応用情報の勉強をしていたので久しぶりの基本情報科目 A の模擬試験は 80％。余裕があるので科目 B に集中することとする。アルゴリズム、難しい…。  
-> 何回も途中で飽きて頓挫していた Git の勉強を開始。実務では絶対使うので飽きたとか言ってる場合ではない。参考書は半分弱まで進んだ。
+-   職業訓練校：開発演習 II
+-   個人開発：Web 単語帳アプリ Tango の要件定義とユースケース図作成
+    > 今日からプログラミングの学習記録をつける。  
+    > 開発演習では自分の担当部分がほぼ想定通り動くようになった。頭を悩ませながら作り込んだ部分だったので嬉しさもひとしお。一方チームの他の人が作っている部分については全く理解が及ばず。全体像がまだ見えない。  
+    > Web 単語帳アプリの開発を始めた。アプリ名も決定。フロントエンド部分はできれば Vue で作りたいので勉強しないと。ただ時間が限られているので技術選定は慎重にしよう。
 
-### 2024-11-03 SUN  
-- 基本情報科目 B：アルゴリズム × 擬似言語トレーニングブック
-- Git：いちばんやさしい Git&GitHub の教本
-- Docker：Docker&仮想サーバー完全入門
-> アルゴリズム × 擬似言語トレーニングブックは苦難に満ちた第 4 章応用例題を終え、最終章 IPA のサンプル問題へ。  
-> Git&GitHub の教本は Chapter5 読了。一通りの GitHub フローについて学ぶ。まだあやふやなので復習が必要。  
-> Docker&仮想サーバー完全入門は Chapter2 まで。
-> - コンテナは「コンテナイメージ」から作られる
-> - イメージはレジストリに保管
-> - コンテナは作っては削除が基本
+### 2024-11-02 SAT
 
-### 2024-11-04 MON 
-- Docker：Docker&仮想サーバー完全入門
-> Docker&仮想サーバー完全入門は Chapter4 の途中まで。Docker Composeでコンテナの作成・実行・停止。  
-> - Docker Compose：一度に複数のコンテナを作成・実行できるソフトウェア
-> - Docker Composeでは設定ファイルYAMLが必要
-> - YAMLではキーと値をコロン：で繋いで記述する
+-   基本情報科目 B：アルゴリズム × 擬似言語トレーニングブック
+-   基本情報科目 A：過去問道場
+-   Git：いちばんやさしい Git&GitHub の教本
+    > 最近までずっと応用情報の勉強をしていたので久しぶりの基本情報科目 A の模擬試験は 80％。余裕があるので科目 B に集中することとする。アルゴリズム、難しい…。  
+    > 何回も途中で飽きて頓挫していた Git の勉強を開始。実務では絶対使うので飽きたとか言ってる場合ではない。参考書は半分弱まで進んだ。
+
+### 2024-11-03 SUN
+
+-   基本情報科目 B：アルゴリズム × 擬似言語トレーニングブック
+-   Git：いちばんやさしい Git&GitHub の教本
+-   Docker：Docker&仮想サーバー完全入門
+    > アルゴリズム × 擬似言語トレーニングブックは苦難に満ちた第 4 章応用例題を終え、最終章 IPA のサンプル問題へ。  
+    > Git&GitHub の教本は Chapter5 読了。一通りの GitHub フローについて学ぶ。まだあやふやなので復習が必要。  
+    > Docker&仮想サーバー完全入門は Chapter2 まで。
+    >
+    > -   コンテナは「コンテナイメージ」から作られる
+    > -   イメージはレジストリに保管
+    > -   コンテナは作っては削除が基本
+
+### 2024-11-04 MON
+
+-   Docker：Docker&仮想サーバー完全入門
+    > Docker&仮想サーバー完全入門は Chapter4 の途中まで。Docker Compose でコンテナの作成・実行・停止。
+    >
+    > -   Docker Compose：一度に複数のコンテナを作成・実行できるソフトウェア
+    > -   Docker Compose では設定ファイル YAML が必要
+    > -   YAML ではキーと値をコロン：で繋いで記述する
 
 ### 2024-11-05 TUE
-- TILとマークダウン記法について調べる
-- Git：いちばんやさしい Git&GitHub の教本
-> 学習記録を公開するのにはTILが良さそうと思い、書き溜めていた(という量でもないが) 記録をマークダウン記法に直し公開。  
-> いちばんやさしい Git&GitHub の教本読了。一通りのGitHubフローは把握。コマンドは使いながら覚えるしかないか。
-> - git checkout <ブランチ名>で別のブランチに移動
-> - git add -A：新規追加・編集・削除した全てのファイルをステージングエリアへ追加
-> - ベースブランチに変更が入った場合は作業中のトピックブランチにも反映させておく
-> - -aオプション：更新されたファイルをステージングエリアに追加してそのままコミット
+
+-   TIL とマークダウン記法について調べる
+-   Git：いちばんやさしい Git&GitHub の教本
+    > 学習記録を公開するのには TIL が良さそうと思い、書き溜めていた(という量でもないが) 記録をマークダウン記法に直し公開。  
+    > いちばんやさしい Git&GitHub の教本読了。一通りの GitHub フローは把握。コマンドは使いながら覚えるしかないか。
+    >
+    > -   git checkout <ブランチ名>で別のブランチに移動
+    > -   git add -A：新規追加・編集・削除した全てのファイルをステージングエリアへ追加
+    > -   ベースブランチに変更が入った場合は作業中のトピックブランチにも反映させておく
+    > -   -a オプション：更新されたファイルをステージングエリアに追加してそのままコミット
 
 ### 2024-11-07 THU
-- 職業訓練校：開発演習 II 
-- Docker：Docker&仮想サーバー完全入門
-> docker compose up -dコマンドでoperation not permittedのエラー。解決法を調べる。  
-> ↓  
-> こねくり回した結果、システム設定→プライバシーとセキュリティ→フルディスクアクセスでターミナルにフルディスクアクセスを許可することで解決。
-> - コンテナ内のデータを残すには永続化が必要
-> - ボリューム：Dockerが管理する記憶領域にデータを永続化する仕組み。データベースのデータなどに向いている。公式推奨。
-> - バインドマウント：ホストOSのフォルダやファイルをマウントする仕組み。変更頻度の高いデータ向き。
-> - DockerFile：どんなイメージを作るのか設定を記述するテキストファイル
+
+-   職業訓練校：開発演習 II
+-   Docker：Docker&仮想サーバー完全入門
+    > docker compose up -d コマンドで operation not permitted のエラー。解決法を調べる。  
+    > ↓  
+    > こねくり回した結果、システム設定 → プライバシーとセキュリティ → フルディスクアクセスでターミナルにフルディスクアクセスを許可することで解決。
+    >
+    > -   コンテナ内のデータを残すには永続化が必要
+    > -   ボリューム：Docker が管理する記憶領域にデータを永続化する仕組み。データベースのデータなどに向いている。公式推奨。
+    > -   バインドマウント：ホスト OS のフォルダやファイルをマウントする仕組み。変更頻度の高いデータ向き。
+    > -   DockerFile：どんなイメージを作るのか設定を記述するテキストファイル
 
 ### 2024-11-08 FRI
-- 職業訓練校：開発演習 II 
-- Docker：Docker&仮想サーバー完全入門
-> Docker&仮想サーバー完全入門は読了。  
-> Flaskコンテナを構築したところ、ImportError: cannot import name 'url_quote' from 'werkzeug.urls'というエラー。pip install -U でFlaskのバージョンを最新にしてビルドしなおしたことで解決。  
-> バインドマウントしたファイルを変更しても即時反映がされなかったので、compose.yamlのenvironmentにFLASK_DEBUG=1を追加。即時反映するようになった。
-> - docker compose logs コンテナ名：コンテナのログを表示
-> - ports: - "8080:80"：Dockerホストのポート8080とコンテナのポート80を紐付ける
+
+-   職業訓練校：開発演習 II
+-   Docker：Docker&仮想サーバー完全入門
+    > Docker&仮想サーバー完全入門は読了。  
+    > Flask コンテナを構築したところ、ImportError: cannot import name 'url_quote' from 'werkzeug.urls'というエラー。pip install -U で Flask のバージョンを最新にしてビルドしなおしたことで解決。  
+    > バインドマウントしたファイルを変更しても即時反映がされなかったので、compose.yaml の environment に FLASK_DEBUG=1 を追加。即時反映するようになった。
+    >
+    > -   docker compose logs コンテナ名：コンテナのログを表示
+    > -   ports: - "8080:80"：Docker ホストのポート 8080 とコンテナのポート 80 を紐付ける
 
 ### 2024-11-09 SAT
-- Linux：Linux標準教科書（Ver.3.0.5）
-- 基本情報 科目B：令和4年サンプル問題20問、令和5、6年公開問題12問
-> DockerでDebianコンテナを構築し、Linuxコマンドの勉強。  
-> 基本情報Bは解ける過去問（数少ないが）は全て解いた。受験申し込みも完了。
-> - cpコマンドのオプション -i：処理を行うときに確認　-r：ディレクトリをコピー　-p：元ファイルの情報を保存
+
+-   Linux：Linux 標準教科書（Ver.3.0.5）
+-   基本情報 科目 B：令和 4 年サンプル問題 20 問、令和 5、6 年公開問題 12 問
+    > Docker で Debian コンテナを構築し、Linux コマンドの勉強。  
+    > 基本情報 B は解ける過去問（数少ないが）は全て解いた。受験申し込みも完了。
+    >
+    > -   cp コマンドのオプション -i：処理を行うときに確認　-r：ディレクトリをコピー　-p：元ファイルの情報を保存
 
 ### 2024-11-10 SUN
-- 個人開発：Tangoのユースケース定義
-> chatGPTに添削してもらいながらTangoのユースケース定義完了。今月中に設計を終わらせて12月からコーディングに入る計画を立てた。
+
+-   個人開発：Tango のユースケース定義
+    > chatGPT に添削してもらいながら Tango のユースケース定義完了。今月中に設計を終わらせて 12 月からコーディングに入る計画を立てた。
 
 ### 2024-11-11 MON
-- 職業訓練校：開発演習 II
-  
+
+-   職業訓練校：開発演習 II
+
 ### 2024-11-12 TUE
-- 職業訓練校：開発演習 II 
+
+-   職業訓練校：開発演習 II
 
 ### 2024-11-13 WED
-- 職業訓練校：開発演習 II 
-> 開発演習は全体的にエラーもなくなり、ほぼ想定通りの動きに。
+
+-   職業訓練校：開発演習 II
+    > 開発演習は全体的にエラーもなくなり、ほぼ想定通りの動きに。
 
 ### 2024-11-14 THU
-- 基本情報 科目B：アルゴリズム × 擬似言語トレーニングブック
-> アルゴリズム × 擬似言語トレーニングブックは前回間違えた問題を復習。
+
+-   基本情報 科目 B：アルゴリズム × 擬似言語トレーニングブック
+    > アルゴリズム × 擬似言語トレーニングブックは前回間違えた問題を復習。
 
 ### 2024-11-15 FRI
-- 職業訓練校：開発演習 II
 
-### 2024-11-16 SAT 
-- 基本情報技術者試験受験：合格点取得（科目A735点、科目B790点）
-> 訓練受講前の5月に受けたとき落とした科目Bも合格点を上回ることができ、無事ABともに合格点取得。嬉しい。
+-   職業訓練校：開発演習 II
+
+### 2024-11-16 SAT
+
+-   基本情報技術者試験受験：合格点取得（科目 A735 点、科目 B790 点）
+    > 訓練受講前の 5 月に受けたとき落とした科目 B も合格点を上回ることができ、無事 AB ともに合格点取得。嬉しい。
 
 ### 2024-11-17 SAN
-- 個人開発：ER図作成
-- 個人開発：データ形式詳細作成
-- SQLについて学習
-> TangoのER図とデータ形式詳細を作成。
-> - AUTO_INCREMENT：自動増分
-> - CURRENT_TIMESTAMP：カラムのデフォルト値として指定すると、レコードの挿入時に現在の日時が自動的に設定される
-> - ON UPDATE CURRENT_TIMESTAMP：指定すると、レコードが更新されるたびに現在の日時が自動的に更新される
+
+-   個人開発：ER 図作成
+-   個人開発：データ形式詳細作成
+-   SQL について学習
+    > Tango の ER 図とデータ形式詳細を作成。
+    >
+    > -   AUTO_INCREMENT：自動増分
+    > -   CURRENT_TIMESTAMP：カラムのデフォルト値として指定すると、レコードの挿入時に現在の日時が自動的に設定される
+    > -   ON UPDATE CURRENT_TIMESTAMP：指定すると、レコードが更新されるたびに現在の日時が自動的に更新される
 
 ### 2024-11-18 MON
-- 職業訓練校：企業実習
-- Java：徹底攻略Java SE 11 Silver問題集
-- Linux：Linux標準教科書（Ver.3.0.5）
-> 訓練校では今日から10日間の企業実習。実際に実務で使用するシステムの開発に携わる。今日は業務理解が中心。  
-> 帰宅後、Linuxコマンドの勉強。Debianコンテナではlessやmanuコマンドがデフォルトでインストールされていなかった。
-> - docker compose exec debian /bin/bash：Debianコンテナのシェルを立ち上げる
-> - catコマンド：ファイルの内容を確認。-nオプションで行番号表示
-> - 「less is more（lessはmoreより良い）」
-> - ls > ls-output：lsの出力結果をリダイレクトして、ファイルに書き込む
+
+-   職業訓練校：企業実習
+-   Java：徹底攻略 Java SE 11 Silver 問題集
+-   Linux：Linux 標準教科書（Ver.3.0.5）
+    > 訓練校では今日から 10 日間の企業実習。実際に実務で使用するシステムの開発に携わる。今日は業務理解が中心。  
+    > 帰宅後、Linux コマンドの勉強。Debian コンテナでは less や manu コマンドがデフォルトでインストールされていなかった。
+    >
+    > -   docker compose exec debian /bin/bash：Debian コンテナのシェルを立ち上げる
+    > -   cat コマンド：ファイルの内容を確認。-n オプションで行番号表示
+    > -   「less is more（less は more より良い）」
+    > -   ls > ls-output：ls の出力結果をリダイレクトして、ファイルに書き込む
 
 ### 2024-11-19 TUE
-- 職業訓練校：企業実習
-- Java：徹底攻略Java SE 11 Silver問題集
+
+-   職業訓練校：企業実習
+-   Java：徹底攻略 Java SE 11 Silver 問題集
 
 ### 2024-11-20 WED
-- 職業訓練校：企業実習
-- Java：徹底攻略Java SE 11 Silver問題集
+
+-   職業訓練校：企業実習
+-   Java：徹底攻略 Java SE 11 Silver 問題集
 
 ### 2024-11-21 THU
-- 職業訓練校：企業実習
-- Java：徹底攻略Java SE 11 Silver問題集
-- SQL：スッキリわかるSQL入門
-> 企業実習ではシステムに必要なSQLをひたすら考えて書いている。この機会にSQLの基礎を固めようと思い書籍を購入。
+
+-   職業訓練校：企業実習
+-   Java：徹底攻略 Java SE 11 Silver 問題集
+-   SQL：スッキリわかる SQL 入門
+    > 企業実習ではシステムに必要な SQL をひたすら考えて書いている。この機会に SQL の基礎を固めようと思い書籍を購入。
 
 ### 2024-11-22 FRI
-- 職業訓練校：企業実習
-- Java：徹底攻略Java SE 11 Silver問題集
+
+-   職業訓練校：企業実習
+-   Java：徹底攻略 Java SE 11 Silver 問題集
 
 ### 2024-11-23 SAT
-- 個人開発：Tango画面遷移図
-- SQL：スッキリわかるSQL入門
-> FigJamを使用して画面遷移図を作成。
-> スッキリわかるSQL入門はチャプター5完了。
+
+-   個人開発：Tango 画面遷移図
+-   SQL：スッキリわかる SQL 入門
+    > FigJam を使用して画面遷移図を作成。
+    > スッキリわかる SQL 入門はチャプター 5 完了。
+
+### 2024-11-24 SUN
+
+-   個人開発：Tango クラス図
+    > plantUML を使用してクラス図を途中まで作成。
