--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -151,3 +151,26 @@
 ### 2024-11-25 MON
 - 職業訓練校：企業実習
 - 個人開発：Tangoクラス図
+- SQL：スッキリわかる SQL 入門
+> 企業実習はSQLの洗い出しを終え、HTMLの作成。  
+> Tangoクラス図はパッケージ分けし、Userクラスを中心に作る。  
+> SQL入門はチャプター6読破。
+> - Data Transfer Object(DTO)：コントローラーとサービス間でデータをやり取りする際に使われるオブジェクト。ビジネスロジックを含まないデータの入れ物であり、メソッドを持たない。
+>   - クライアントから送られてくる情報(メールアドレス、パスワードなど)を明確にモデル化できる
+>   - エンティティに直接アクセスさせないことで、不要なフィールドが外部に露出しないようにできる
+
+### 2024-11-26 TUE
+- 職業訓練校：企業実習
+- 個人開発：Tangoクラス図
+- SQL：スッキリわかる SQL 入門
+> Tangoクラス図はUser関係の作り込みを終えた。認証処理があるので量が多い。SQL入門はチャプター6の練習問題1。
+
+### 2024-11-27 WED
+- 職業訓練校：企業実習
+- 個人開発：Tangoクラス図
+- SQL：スッキリわかる SQL 入門
+> 企業実習はHTMLの作成とJSPについてのレクチャー。Tomcatを使用。  
+> Tangoクラス図はCardbook関係。どのクラスにどう責務を持たせるかが難しい。
+> - Optional<>：Javaのjava.util.Optionalクラスを用いた戻り値型。
+>   - メソッドの結果としてオブジェクトが存在する場合もあれば存在しない場合もあることを表す
+>   - nullチェック漏れによるエラーを防ぐことができる
