--- a/2024-11TIL.md
+++ b/2024-11TIL.md
@@ -150,6 +150,7 @@
 
 ### 2024-11-25 MON
 - 職業訓練校：企業実習
+- Java：徹底攻略 Java SE 11 Silver 問題集
 - 個人開発：Tangoクラス図
 - SQL：スッキリわかる SQL 入門
 > 企業実習はSQLの洗い出しを終え、HTMLの作成。  
@@ -161,12 +162,14 @@
 
 ### 2024-11-26 TUE
 - 職業訓練校：企業実習
+- Java：徹底攻略 Java SE 11 Silver 問題集
 - 個人開発：Tangoクラス図
 - SQL：スッキリわかる SQL 入門
 > Tangoクラス図はUser関係の作り込みを終えた。認証処理があるので量が多い。SQL入門はチャプター6の練習問題1。
 
 ### 2024-11-27 WED
 - 職業訓練校：企業実習
+- Java：徹底攻略 Java SE 11 Silver 問題集
 - 個人開発：Tangoクラス図
 - SQL：スッキリわかる SQL 入門
 > 企業実習はHTMLの作成とJSPについてのレクチャー。Tomcatを使用。  
