--- a/2024-12TIL.md
+++ b/2024-12TIL.md
@@ -3,3 +3,8 @@
 - 個人開発：Tangoクラス図
 > 企業実習ではHTMLをJSP化。明日で最後なので進めるところまで進めたい。  
 > Tangoのクラス図がようやく完成。変更箇所が多いので、明日はER図を作り直す。
+
+### 2024-12-05 THU
+- 個人開発：Tango ER図再作成
+- 個人開発：Tango API設計準備
+> クラス図を作る過程で変更があったので、ER図を再作成。API設計に入る。
