--- a/2024-12TIL.md
+++ b/2024-12TIL.md
@@ -7,4 +7,9 @@
 ### 2024-12-05 THU
 - 個人開発：Tango ER図再作成
 - 個人開発：Tango API設計準備
-> クラス図を作る過程で変更があったので、ER図を再作成。API設計に入る。
+> クラス図を作る過程で変更があったので、ER図を再作成。API設計に入る。「WEB APIの設計」を読み始める。
+
+### 2024-12-06 FRI
+- API：WEB APIの設計
+- paizaの問題
+> WEB APIの設計は第一部を読了。
