--- a/2024-12TIL.md
+++ b/2024-12TIL.md
@@ -17,3 +17,7 @@
 ### 2024-12-07 SAT
 - 個人開発：Tango API設計
 > API設計は認証関係とカードブック関係まで。わからないことだらけ。
+
+### 2024-12-08 SUN
+- 個人開発：Tango API設計
+> なんとかAPI設計完了。明日からはプログラミングに入る。
